--- a/requirements.txt
+++ b/requirements.txt
@@ -65,7 +65,7 @@ prometheus-client==0.14.1
 prompt-toolkit==3.0.31
 protobuf==3.20.2
 psutil==5.9.2
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pure-eval==0.2.2
 pyarrow==9.0.0
 pycparser==2.21
